fajita: Enable smart pixels
Change-Id: I57d83befd064c0ebb18a3e52d58807e29228be45
Signed-off-by: DarkJoker360 <simoespo159@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -411,4 +411,7 @@
         <item>2053</item> <!-- <item>sensorLocationY</item> -->
         <item>87</item>   <!-- <item>sensorRadius</item> -->
     </integer-array>
+	
+	<!-- Whether the device supports Smart Pixels -->
+    <bool name="config_supportSmartPixels">true</bool>
 </resources>
