fajita: Setup udfps overlays
 * fod radius = radius value / 2
 * fod x position = x position value + (radius value / 2)
 * fod y position = y position value + (radius value / 2)
 * fod enroll progress radius = (radius value / 2) + 5

Change-Id: I9d3a39ab6b6b5b069e4ba66ef6baa477fd6829da
Signed-off-by: DarkJoker360 <simoespo159@gmail.com>

--- a/overlay-lineage/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay-lineage/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -16,13 +16,15 @@
 ** limitations under the License.
 */
 -->
-
 <!-- These resources are around just to allow their values to be customized
      for different hardware and product builds. -->
 <resources>
-    <!-- Respect drawable/rounded.xml intrinsic size for multiple radius corner path customization -->
-    <bool name="config_roundedCornerMultipleRadius">true</bool>
+    <!-- Color of the UDFPS Pressed view -->
+    <color name="config_udfpsColor">#00ff00</color>
 
-    <!-- The radius of the enrollment progress bar, in dp -->
-    <integer name="config_udfpsEnrollProgressBar" translatable="false">100</integer>
+    <!-- HBM type of UDFPS overlay.
+            0 - GLOBAL HBM
+            1 - LOCAL HBM
+    -->
+    <integer name="config_udfps_hbm_type">0</integer>
 </resources>
